Fix banner text align

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,7 @@ a.buy-now:hover{
     height: 250px;
     display: block;
     background-color: #292626;
+	padding:5em 0;
 }
 .banner-top h1{
 	font-size:3em;
